--- a/pages/skills.html
+++ b/pages/skills.html
@@ -520,9 +520,9 @@
                 <div class="lb2"></div>
 
                 <!--  -->
-                <div id="table_msg_fullscreen_01" class="button_hide_container container_organize"> 
+                <div id="table_msg_fullscreen_02" class="button_hide_container container_organize"> 
                     <div class="button_hide"></div>
-                    <p class="attention container_organize" style="text-align: center;">Click on the table to view it in full screen.</p>
+                    <p class="warning container_organize" style="text-align: center;">Click on the table to view it in full screen.</p>
                 </div> 
 
                 <div class="lb2"></div>
