--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -129,11 +129,14 @@
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template right noText">Texto</span>.</li>
                 </ul>
 
+                <p style="color: magenta;">Exemplos de teste do gerador de ícones</p>
+
                 <p>Ícones de texto com ∆Largura = 10px:</p>
 
                 <ul>
                     <li>Ícone vazio: <span class="textIcon_template_moreWide"></span>.</li>
                     <li>Ícone com texto: <span class="textIcon_template_moreWide">Texto</span>.</li>
+                    <li>Ícone com texto e com a classe 'right': <span class="textIcon_template_moreWide right">Texto</span>.</li>
                     <li>Ícone vazio e com a classe 'noText': <span class="textIcon_template_moreWide noText"></span>.</li>
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template_moreWide noText">Texto</span>.</li>
                 </ul>
@@ -143,6 +146,7 @@
                 <ul>
                     <li>Ícone vazio: <span class="textIcon_template_lessWide"></span>.</li>
                     <li>Ícone com texto: <span class="textIcon_template_lessWide">Texto</span>.</li>
+                    <li>Ícone com texto e com a classe 'right': <span class="textIcon_template_lessWide right">Texto</span>.</li>
                     <li>Ícone vazio e com a classe 'noText': <span class="textIcon_template_lessWide noText"></span>.</li>
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template_lessWide noText">Texto</span>.</li>
                 </ul>
@@ -152,6 +156,7 @@
                 <ul>
                     <li>Ícone vazio: <span class="textIcon_template_moreSpace"></span>.</li>
                     <li>Ícone com texto: <span class="textIcon_template_moreSpace">Texto</span>.</li>
+                    <li>Ícone com texto e com a classe 'right': <span class="textIcon_template_moreSpace right">Texto</span>.</li>
                     <li>Ícone vazio e com a classe 'noText': <span class="textIcon_template_moreSpace noText"></span>.</li>
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template_moreSpace noText">Texto</span>.</li>
                 </ul>
@@ -161,6 +166,7 @@
                 <ul>
                     <li>Ícone vazio: <span class="textIcon_template_lessSpace"></span>.</li>
                     <li>Ícone com texto: <span class="textIcon_template_lessSpace">Texto</span>.</li>
+                    <li>Ícone com texto e com a classe 'right': <span class="textIcon_template_lessSpace right">Texto</span>.</li>
                     <li>Ícone vazio e com a classe 'noText': <span class="textIcon_template_lessSpace noText"></span>.</li>
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template_lessSpace noText">Texto</span>.</li>
                 </ul>
@@ -170,6 +176,7 @@
                 <ul>
                     <li>Ícone vazio: <span class="textIcon_template_above"></span>.</li>
                     <li>Ícone com texto: <span class="textIcon_template_above">Texto</span>.</li>
+                    <li>Ícone com texto e com a classe 'right': <span class="textIcon_template_above right">Texto</span>.</li>
                     <li>Ícone vazio e com a classe 'noText': <span class="textIcon_template_above noText"></span>.</li>
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template_above noText">Texto</span>.</li>
                 </ul>
@@ -179,6 +186,7 @@
                 <ul>
                     <li>Ícone vazio: <span class="textIcon_template_below"></span>.</li>
                     <li>Ícone com texto: <span class="textIcon_template_below">Texto</span>.</li>
+                    <li>Ícone com texto e com a classe 'right': <span class="textIcon_template_below right">Texto</span>.</li>
                     <li>Ícone vazio e com a classe 'noText': <span class="textIcon_template_below noText"></span>.</li>
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template_below noText">Texto</span>.</li>
                 </ul>
@@ -188,6 +196,7 @@
                 <ul>
                     <li>Ícone vazio: <span class="textIcon_template_uncommon"></span>.</li>
                     <li>Ícone com texto: <span class="textIcon_template_uncommon">Texto</span>.</li>
+                    <li>Ícone com texto e com a classe 'right': <span class="textIcon_template_uncommon right">Texto</span>.</li>
                     <li>Ícone vazio e com a classe 'noText': <span class="textIcon_template_uncommon noText"></span>.</li>
                     <li>Ícone com texto e com a classe 'noText': <span class="textIcon_template_uncommon noText">Texto</span>.</li>
                 </ul>
