--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -75,7 +75,7 @@
 
             <div class="assets">
 
-                <div class="codification_piece dl_li language"><dt>HTML</dt><dd><pre><code>
+                <div class="codification_piece dl_li language"><dt class="on">HTML</dt><dd><pre><code>
 &lt;dl>
     &lt;div>&lt;dt class="dl_li">Termo 1: &lt;/dt>&lt;dd>Descrição 1.&lt;/dd>&lt;/div>
     &lt;div>&lt;dt class="dl_li">Termo 2: &lt;/dt>&lt;dd>Descrição 2.&lt;/dd>&lt;/div>
@@ -96,6 +96,30 @@
 function degToRad(degrees) {
     return degrees * Math.PI / 180;
 }
+                </code></pre></dd></div>
+
+                <div class="codification_piece dl_li language"><dt>JSON</dt><dd><pre><code>
+[
+    {
+        "name": "Mac mini",
+        "OS": "OS X v10.8",
+        "processor": "2,5 GHz",
+        "storages": "500 GB",
+        "memory": "4 GB"
+    },
+    {
+        "name": "iPhone 11",
+        "OS": "iOS 13",
+        "chip": "A13 Bionic",
+        "storages": "128 GB"
+    },
+    {
+        "name": "iPad mini",
+        "OS": "iOS 6",
+        "chip": "A5 dual-core",
+        "storages": "32 GB"
+    }
+]
                 </code></pre></dd></div>
                 
                 <div class="codification_piece dl_li resources"><dt>Imagens</dt><dd>...</dd></div>
