--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -84,18 +84,17 @@
                 </code></pre></dd></div>
 
                 <div class="codification_piece dl_li language"><dt>CSS</dt><dd><pre><code>
-.nav {
+div {
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
 }
                 </code></pre></dd></div>
 
                 <div class="codification_piece dl_li language"><dt>JS</dt><dd><pre><code>
-function degToRad(degrees) {
-    return degrees * Math.PI / 180;
-}
+var bigCode = document.querySelector('pre code')
                 </code></pre></dd></div>
 
                 <div class="codification_piece dl_li language"><dt>JSON</dt><dd><pre><code>
