--- a/pages/skills.html
+++ b/pages/skills.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br"> <!-- en -->
 <head>
-    <meta charset="utf-8">
     <title>Tec OP</title>
+    <meta charset="utf-8">
     <meta name = "apple-mobile-web-app-title" content = "Tec OP">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="George Maxwell">
     <meta name="description" content="Descrição da página. Especificar uma descrição que inclua palavras-chave relacionadas ao conteúdo da página pode ajudar a tornar a página mais alta nas pesquisas realizadas nos mecanismos de busca.">
     <link rel="shortcut icon" href="../images/icons/favicon.ico" type="image/x-icon">
+
+    <link href='../hi-techCore/styles/css/downloadFonts.css' rel='stylesheet'>  
     <link href='../hi-techCore/styles/css/normalize.css' rel='stylesheet'>  
     <link href='../hi-techCore/styles/css/gmes_normalize.css' rel='stylesheet'>
     <link href='../hi-techCore/styles/css/defaults.css' rel='stylesheet'><!---->
