--- a/pages/download.html
+++ b/pages/download.html
@@ -8,6 +8,8 @@
     <meta name="author" content="George Maxwell">
     <meta name="description" content="Descrição da página. Especificar uma descrição que inclua palavras-chave relacionadas ao conteúdo da página pode ajudar a tornar a página mais alta nas pesquisas realizadas nos mecanismos de busca.">
     <link rel="shortcut icon" href="../images/icons/favicon.ico" type="image/x-icon">
+
+    <link href='../hi-techCore/styles/css/downloadFonts.css' rel='stylesheet'>  
     <link href='../hi-techCore/styles/css/normalize.css' rel='stylesheet'>  
     <link href='../hi-techCore/styles/css/gmes_normalize.css' rel='stylesheet'>
     <link href='../hi-techCore/styles/css/defaults.css' rel='stylesheet'><!---->
