--- a/pages/hitTypes.html
+++ b/pages/hitTypes.html
@@ -2,12 +2,19 @@
 <html lang="pt-br">
 <head>
 <title>Hit Types</title>
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"><!-- Set Textastic to Pages: width=482px -->
-<link href='..//hi-techCore/styles/css/gmes_normalize.css' rel='stylesheet'>
-<link href='..//hi-techCore/styles/css/defaults.css' rel='stylesheet'><!-- 
-<link href='styles/setup_pages.css' rel='stylesheet'> --><!-- Set Textastic to Pages: href='styles/setup_textastic.css' -->
+<meta name = "apple-mobile-web-app-title" content = "Tec OP">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="George Maxwell">
+<meta name="description" content="Descrição da página. Especificar uma descrição que inclua palavras-chave relacionadas ao conteúdo da página pode ajudar a tornar a página mais alta nas pesquisas realizadas nos mecanismos de busca.">
+<link rel="shortcut icon" href="../images/icons/favicon.ico" type="image/x-icon">
+
+<link href='../hi-techCore/styles/css/downloadFonts.css' rel='stylesheet'>  
+<link href='../hi-techCore/styles/css/normalize.css' rel='stylesheet'>  
+<link href='../hi-techCore/styles/css/gmes_normalize.css' rel='stylesheet'>
+<link href='../hi-techCore/styles/css/defaults.css' rel='stylesheet'><!---->
+<link href='../styles/css/identity.css' rel='stylesheet'>
+
 <script src="..//hi-techCore/scripts/development.js"></script>
 <style>
 
