--- a/hi-techCore/pages/page.html
+++ b/hi-techCore/pages/page.html
@@ -542,7 +542,7 @@
 
     <script defer src="../scripts/defaults.js"></script> 
     <script defer src="../scripts/identity.js"></script>
-    <script async src="../scripts/development.js"></script>
+    <script async src="../../../Development/console.js"></script>
     
 </body>
 </html>
