--- a/pages/index.html
+++ b/pages/index.html
@@ -142,7 +142,7 @@
                     
                     <div class="download_buttons">
                         <!-- <button>Free Demo</button> -->
-                        <button class="button_text pill" style="width: 155px;">
+                        <button class="button_text pill"><!--  style="width: 155px" -->
                             <span class="piece_text"><!-- Download --> Free Demo</span>
                         </button>
                         
