--- a/pages/index.html
+++ b/pages/index.html
@@ -147,7 +147,7 @@
                         </button>
                         
                         <button class="button_text pill">
-                            <span class="piece_text">Buy it on Steam</span>
+                            <span class="piece_text">Buy on Steam</span>
                         </button>
                         <!--<button>Buy for $14.99</button>-->
                     </div>
