--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -346,13 +346,19 @@
             </div>
         </div>
 
-        <a class="headerNav-button">
-            <img src="../images/icons/headerNav.svg" alt="Header-nav button">  
-        </a>
+        <div class="headerNav-button">
+            <a>
+                <img src="../images/icons/headerNav.svg" alt="Header-nav button">  
+            </a>        
+        </div>
 
     </header>
 
-
+        <div class="headerNav-button">
+            <a>
+                <img src="../images/icons/headerNav.svg" alt="Header-nav button">  
+            </a>        
+        </div>
 
     <main>
 
@@ -1146,7 +1152,7 @@ font-size: 43px;
                     <code class="gambiarraTemporaria">
 &lt;details>
 
-    &lt;summary>&lt;div>Resumo&lt;/div>&lt;/summary>
+    &lt;summary>Resumo&lt;/summary>
 
     &lt;div>Algo pequeno o suficiente p/ escapar de um aviso casual.&lt;/div>        
     
