--- a/hi-techCore/pages/page.html
+++ b/hi-techCore/pages/page.html
@@ -55,9 +55,11 @@
             </div>
         </div>
 
-        <a class="headerNav-button">
-            <img src="../images/icons/headerNav.svg" alt="Header-nav button">  
-        </a>
+        <div class="headerNav-button">
+            <a>
+                <img src="../images/icons/headerNav.svg" alt="Header-nav button">  
+            </a>        
+        </div>
 
     </header>
 
