--- a/pages/skills.html
+++ b/pages/skills.html
@@ -85,9 +85,11 @@
             </div>
         </div>
  
-        <a class="headerNav-button">
-            <img src="../hi-techCore/images/icons/headerNav.svg" alt="Header-nav button">  
-        </a>
+        <div class="headerNav-button">
+            <a>
+                <img src="../hi-techCore/images/icons/headerNav.svg" alt="Header-nav button">  
+            </a>        
+        </div>
 
     </header>
 
