--- a/pages/skills.html
+++ b/pages/skills.html
@@ -156,7 +156,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Vital Energy.png" alt=""><span class="piece_text">Vital Energy</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Aura.png" alt=""><span class="piece_text">Aura</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -200,7 +200,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Vital Energy.png" alt=""><span class="piece_text">Vital Energy</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Aura.png" alt=""><span class="piece_text">Aura</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -244,11 +244,11 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Vital Energy.png" alt=""><span class="piece_text">Vital Energy</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Aura.png" alt=""><span class="piece_text">Aura</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Vital Energy.png" alt=""><span class="piece_text">Vital Energy</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Aura.png" alt=""><span class="piece_text">Aura</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -268,7 +268,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Vital Energy.png" alt=""><span class="piece_text">Vital Energy</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Aura.png" alt=""><span class="piece_text">Aura</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -310,7 +310,7 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Magnetic.png" alt=" "><span>Magnetic</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Metal.png" alt=" "><span>Metal</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Nuclear.png" alt=" "><span>Nuclear</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Piercing.png" alt=" "><span>Piercing</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Sharp.png" alt=" "><span>Sharp</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Plant.png" alt=" "><span>Plant</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Plasma.png" alt=" "><span>Plasma</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Psychic.png" alt=" "><span>Psychic</span></a></li>
@@ -319,7 +319,7 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Sound.png" alt=" "><span>Sound</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Time.png" alt=" "><span>Time</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Undead.png" alt=" "><span>Undead</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Vital Energy.png" alt=" "><span>Vital Energy</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Aura.png" alt=" "><span>Aura</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Water.png" alt=" "><span>Water</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Wind.png" alt=" "><span>Wind</span></a></li>
                     </ul>  
@@ -570,7 +570,7 @@
 
 <tr class="skillTest">
     <td class='Name'><span>?1</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Dragon.png' alt=''><img class='icon_type' src='../images/game/icons/types/Vital Energy.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Dragon.png' alt=''><img class='icon_type' src='../images/game/icons/types/Aura.png' alt=''></span></td>
     <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'>Act first<!-- Act last --></span>
