--- a/pages/skills.html
+++ b/pages/skills.html
@@ -282,12 +282,18 @@
                     <ul class="choice dropdown center skills_types_choice" onclick="choice(this)">
                         <li><span>Choose Skills Type(s)</span></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><span>All Types</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/State.png" alt=" "><span>State</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Impact.png" alt=" "><span>Impact</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Piercing.png" alt=" "><span>Piercing</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Intelligent.png" alt=" "><span>Intelligent</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Energy.png" alt=" "><span>Energy</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Normal.png" alt=" "><span>Normal</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Aerial.png" alt=" "><span>Aerial</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fighter.png" alt=" "><span>Fighter</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Blade.png" alt=" "><span>Blade</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Shot.png" alt=" "><span>Shot</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Cybernetic.png" alt=" "><span>Cybernetic</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Digital.png" alt=" "><span>Digital</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fire.png" alt=" "><span>Fire</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Water.png" alt=" "><span>Water</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Electric.png" alt=" "><span>Electric</span></a></li>
@@ -313,7 +319,6 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Cosmic.png" alt=" "><span>Cosmic</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Crystal.png" alt=" "><span>Crystal</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Cut.png" alt=" "><span>Cut</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Digital.png" alt=" "><span>Digital</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Dinosaur.png" alt=" "><span>Dinosaur</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Dragon.png" alt=" "><span>Dragon</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Imp@ct.png" alt=" "><span>Imp@ct</span></a></li>
