--- a/pages/skills.html
+++ b/pages/skills.html
@@ -116,7 +116,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Cybernetic.png" alt=""><span class="piece_text">Cybernetic</span> 
+                        <img class="piece_icon" src="../images/game/icons/types/Cyber.png" alt=""><span class="piece_text">Cyber</span> 
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -160,7 +160,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Cybernetic.png" alt=""><span class="piece_text">Cybernetic</span> 
+                        <img class="piece_icon" src="../images/game/icons/types/Cyber.png" alt=""><span class="piece_text">Cyber</span> 
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -204,7 +204,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Cybernetic.png" alt=""><span class="piece_text">Cybernetic</span> 
+                        <img class="piece_icon" src="../images/game/icons/types/Cyber.png" alt=""><span class="piece_text">Cyber</span> 
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -292,7 +292,7 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fighter.png" alt=" "><span>Fighter</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Blade.png" alt=" "><span>Blade</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Shot.png" alt=" "><span>Shot</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Cybernetic.png" alt=" "><span>Cybernetic</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Cyber.png" alt=" "><span>Cyber</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Digital.png" alt=" "><span>Digital</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fire.png" alt=" "><span>Fire</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Water.png" alt=" "><span>Water</span></a></li>
@@ -751,7 +751,7 @@
 
 <tr>
     <td class='Name'><span>Auto Aim</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cybernetic.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -788,7 +788,7 @@
 
 <tr>
     <td class='Name'><span>Bio Recharge</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cybernetic.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -855,7 +855,7 @@
 
 <tr>
     <td class='Name'><span>Blocking Filter</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cybernetic.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -995,7 +995,7 @@
  
 <tr>
     <td class='Name'><span>Crunch Time</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Impact.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Normal.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -1866,7 +1866,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr class="skillTest">
     <td class='Name'><span>Psionic Boom</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cybernetic.png' alt=''><img class='icon_type' src='../images/game/icons/types/Psychic.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''><img class='icon_type' src='../images/game/icons/types/Psychic.png' alt=''></span></td>
 
     <td class='Damage'><span>-HP</span></td>
     <td class='Effect'>
@@ -1975,7 +1975,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr>
     <td class='Name'><span>Repair</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cybernetic.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
